attempt to fix font graininess on iPhone/Mac

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@ body {
 }
 
 html {
+    transform: translate3d(0,0,0);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
